syntax = "proto3";

package rpc;

service Rpc {
  rpc Preprocess (PreprocessRequest) returns (PreprocessResponse);
  rpc Partdec (PartDecRequest) returns (PartDecResponse);
}

message PreprocessRequest { }

message PreprocessResponse {
  string hex_serialized_sys_key = 1;
}

message PartDecRequest {
  // TODO: remove this
  string ciphertext_hex = 1;
  string content_id = 2;
  string witness_hex = 3;
}

message PartDecResponse {
  string hex_serialized_decryption = 1;
}